# modding-toolkit

./: README.md
local/: .gitignore  Cargo.toml
local/.cargo/: config.toml
local/dll_client/: Cargo.toml
local/dll_client/src/: lib.rs
local/dll_server/: Cargo.toml  rust-toolchain.toml
local/dll_server/src/: lib.rs
local/dll_server/src/game/: mod.rs  ue_types.rs
local/dll_server/src/game/ue_types/: f_name.rs  mod.rs  u_object.rs
local/game_base/: Cargo.toml
local/game_base/src/: lib.rs
local/injection_utils/: Cargo.toml
local/injection_utils/src/: lib.rs
local/injection_utils/src/hooks/: console.rs
local/mod_loader/: Cargo.toml
local/mod_loader/src/: lib.rs
local/mods/client/asset_buddy/: Cargo.toml
local/mods/client/asset_buddy/src/: lib.rs
local/mods/client/modding_debugger/: Cargo.toml
local/mods/client/modding_debugger/src/: lib.rs
local/mods/client/pathfinder/: Cargo.toml
local/mods/client/pathfinder/src/: lib.rs
local/mods/client/tdm_helper/: Cargo.toml
local/mods/client/tdm_helper/src/: lib.rs
local/mods/server/match_tracker/: Cargo.toml
local/mods/server/match_tracker/src/: lib.rs  match_state.rs
local/sdk/game_base/: Cargo.toml
local/sdk/game_base/src/: game_base.rs  lib.rs  offsets.rs  offsets_client.rs  offsets_server.rs
local/sdk/game_base/src/behavior/: has_pawn.rs  has_player.rs  is_controlled.rs  is_player_controlled.rs  mod.rs  u_field_like.rs  u_object_like.rs
local/sdk/game_base/src/data/: asset_data.rs  asset_id.rs  game_name.rs  mod.rs
local/sdk/game_base/src/data_types/: mod.rs  owned_f_string.rs
local/sdk/game_base/src/funcs/: f_name.rs  mod.rs
local/sdk/game_base/src/functionality/: mod.rs  nav_agent.rs
local/sdk/game_base/src/in_game/: mod.rs  nav_agent.rs  object.rs
local/sdk/game_base/src/interface/: console.rs  mod.rs
local/sdk/game_base/src/statics/: asset_manager.rs  g_names.rs  g_objects.rs  game_console.rs  game_instance.rs  game_level.rs  game_mode.rs  game_world.rs  main_menu.rs  mod.rs  object_library.rs  world_proxy.rs
local/sdk/game_base/src/virtual_funcs/: mod.rs  virtual_inavagent.rs  virtual_uconsole.rs  virtual_uobject.rs
local/sdk/injection_utils/: Cargo.toml
local/sdk/injection_utils/src/: lib.rs
local/sdk/injection_utils/src/hooks/: asset_manager.rs  console.rs  mod.rs  player_events.rs  set_game_mode.rs  various.rs
local/sdk/memory_management/: Cargo.toml
local/sdk/memory_management/src/: strings.rs
local/sdk/ue_types/: Cargo.toml
local/sdk/ue_types/src/: lib.rs
local/sdk/ue_types/src/basic/: allocators.rs  f_box.rs  f_color.rs  f_custom_version.rs  f_delegate_handle.rs  f_exec.rs  f_guid.rs  f_int_vector.rs  f_multicast_delegate_base.rs  f_name.rs  f_name_entry.rs  f_quat.rs  f_relative_bit_reference.rs  f_string.rs  f_timer_handle.rs  f_transform.rs  f_unique_net_id_repl.rs  f_url.rs  f_vector.rs  f_weak_object_ptr.rs  mod.rs  t_aligned_bytes.rs  t_array.rs  t_base_dynamic_multicast_delegate.rs  t_base_multicast_delegate.rs  t_bit_array.rs  t_const_set_bit_iterator.rs  t_enum_as_byte.rs  t_indirect_array.rs  t_map.rs  t_multicast_delegate.rs  t_multicast_script_delegate.rs  t_ref_count_ptr.rs  t_shared_ptr.rs  t_shared_ref.rs  t_sorted_map.rs  t_sparse_array.rs  t_subclass_of.rs  t_weak_obj_ptr.rs  unknown_type.rs
local/sdk/ue_types/src/controllers/: a_controller.rs  a_player_controller.rs
local/sdk/ue_types/src/engine/: a_actor.rs  a_game_mode.rs  a_game_session.rs  a_game_state.rs  a_player_state.rs  a_server_stat_replicator.rs  f_asset_data.rs  mod.rs  u_class.rs  u_engine.rs  u_field.rs  u_game_engine.rs  u_game_instance.rs  u_level.rs  u_local_player.rs  u_object.rs  u_player.rs  u_property.rs  u_struct.rs  u_world.rs  u_world_proxy.rs
local/sdk/ue_types/src/engine/actors/: a_actor.rs  a_character.rs  a_info.rs  a_pawn.rs  mod.rs
local/sdk/ue_types/src/engine/base/: f_actor_tick_function.rs  f_auto_complete_node.rs  f_box_sphere_bounds.rs  f_chunked_fixed_uobject_array.rs  f_custom_version_container.rs  f_data_table_row_handle.rs  f_delegate_base.rs  f_engine_version.rs  f_gc_object.rs  f_generation_info.rs  f_object_export.rs  f_object_import.rs  f_object_resource.rs  f_output_device.rs  f_package_file_summary.rs  f_package_index.rs  f_physics_volume_changed.rs  f_primary_asset_id.rs  f_primary_asset_type.rs  f_rep_movement.rs  f_rotation_conversion_cache.rs  f_rotator.rs  f_seamless_travel_handler.rs  f_soft_object_path.rs  f_text.rs  mod.rs  (+12 more)
local/sdk/ue_types/src/funcs/: mod.rs
local/sdk/ue_types/src/interface/: ag_main_menu_game_mode.rs  ax_main_menu_game_mode.rs  mod.rs  u_console.rs
local/sdk/utils/: Cargo.toml
local/sdk/utils/src/: log.rs
local/simulator/src/: main.rs
local/ue_types/: Cargo.toml
local/ue_types/src/: f_name.rs  lib.rs  u_object.rs
local/ue_types/src/base_types/: a_actor.rs  a_controller.rs  f_name.rs  mod.rs  u_class.rs  u_console.rs  u_engine.rs  u_field.rs  u_game_instance.rs  u_level.rs  u_object.rs  u_player.rs  u_property.rs  u_struct.rs  u_world.rs  various.rs
local/ue_types/src/basic/: f_exec.rs  f_int_vector.rs  f_name.rs  f_name_entry.rs  f_string.rs  f_url.rs  f_vector.rs  f_vector_2d.rs  t_array.rs  t_base_dynamic_multicast_delegate.rs  t_enum_as_byte.rs  t_name_entry_array.rs  t_weak_ptr.rs
local/ue_types/src/controllers/: a_player_controller.rs  mod.rs
local/ue_types/src/engine/: a_actor.rs  mod.rs  u_class.rs  u_game_engine.rs  u_game_instance.rs  u_local_player.rs  u_object.rs  u_struct.rs  u_world.rs
local/ue_types/src/engine/base/: f_actor_tick_function.rs  f_auto_complete_node.rs  f_chunked_fixed_uobject_array.rs  f_network_notify.rs  f_rep_attachment.rs  f_rotator.rs  f_struct_base_chain.rs  f_uobject_item.rs  f_world_context.rs  i_nav_agent_interface.rs  mod.rs
local/ue_types/src/funcs/: mod.rs
local/ue_types/src/interface/: mod.rs  u_console.rs
local/utils/: Cargo.toml
local/utils/src/: lib.rs  log.rs
local/utils/uasset_editor/: Cargo.toml
local/utils/uasset_editor/src/: deserialize.rs  main.rs
local/utils/uasset_editor/src/uasset/: file_summary.rs  mod.rs
(+7 files in other folders)
