[workspace]

members = [
    "dll_client",
    "dll_server",
    "game_base",
    "ue_types",
    "injection_utils",
    "utils"
]

[workspace.dependencies]
ue_types = { path = "./ue_types" }
injection_utils = { path = "./injection_utils" }
utils = { path = "./utils" }
game_base = { path = "./game_base" }