[workspace]

members = [
    "mod_loader",
    "sdk/game_base",
    "sdk/ue_types",
    "sdk/injection_utils",
    "sdk/utils",
    "mods/client/pathfinder",
    "mods/client/modding_debugger",
    "mods/client/tdm_helper"
]

[workspace.dependencies]
ue_types = { path = "./sdk/ue_types" }
injection_utils = { path = "./sdk/injection_utils" }
utils = { path = "./sdk/utils" }
game_base = { path = "./sdk/game_base" }