[workspace]

members = [
    "mod_loader",
    "sdk/game_base",
    "sdk/ue_types",
    "sdk/injection_utils",
    "sdk/utils",
    "mods/client/pathfinder",
    "mods/client/modding_debugger",
    "mods/client/tdm_helper"
]

[workspace.dependencies]
ue_types = { path = "./sdk/ue_types" }
injection_utils = { path = "./sdk/injection_utils" }
utils = { path = "./sdk/utils" }
game_base = { path = "./sdk/game_base" }

[profile.release]
# opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[profile.dev]
# opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*