[package]
name = "dll_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ue_types = { workspace = true }
game_base = { workspace = true }
injection_utils = { workspace = true }
utils = { workspace = true, features = ["in-game-console"] }
ctor = "0.1.25"
windows = "0.44.0"
winapi = { version = "0.3.9", features = ["winuser","libloaderapi"] }
