[package]
name = "dll_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ctor = "0.1.25"
retour = "0.1.0"
windows = "0.44.0"
simple_endian = "0.2.1"
widestring = "1.0.2"
winapi = { version = "0.3.9", features = ["winuser","libloaderapi"] }
