[package]
name = "mod_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "steam_api64"

[dependencies]
ctor = "0.1.25"
winapi = { version = "0.3.9", features = ["winuser","libloaderapi"] }
glob = "0.3.1"
libloading = "0.8"