[package]
name = "game_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memory_management = { workspace = true }
ue_types = { workspace = true }
utils = { workspace = true }
regex = "1.10.2"

[features]
default = ["client-sdk"]
client-sdk = []
server-sdk = []