[package]
name = "injection_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ue_types = { workspace = true }
utils = { workspace = true }
game_base = { workspace = true }
retour = "0.1.0"
simple_endian = "0.2.1"
