[package]
name = "asset_buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ue_types = { workspace = true }
game_base = { workspace = true }
injection_utils = { workspace = true }
memory_management = { workspace = true }
utils = { workspace = true }
glob = "0.3.1"
serde = "1.0.193"
serde_yaml = "0.8.7"