[package]
name = "modding_debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
# ue_types = { git = "https://github.com/polymorfiq/modding-toolkit.git", "rev" = "c9ed7429a1b74f68b9074e044e023ebe6d8c48f1" }
# game_base = { git = "https://github.com/polymorfiq/modding-toolkit.git", "rev" = "c9ed7429a1b74f68b9074e044e023ebe6d8c48f1", features = ["client-sdk"] }
# injection_utils = { git = "https://github.com/polymorfiq/modding-toolkit.git", "rev" = "c9ed7429a1b74f68b9074e044e023ebe6d8c48f1" }
# utils = { git = "https://github.com/polymorfiq/modding-toolkit.git", "rev" = "c9ed7429a1b74f68b9074e044e023ebe6d8c48f1" }

ue_types = { workspace = true }
game_base = { workspace = true, features = ["client-sdk"] }
injection_utils = { workspace = true }
utils = { workspace = true }