[package]
name = "pathfinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ue_types = { git = "https://github.com/polymorfiq/modding-toolkit.git", "rev" = "6a7311a830faebf96020337b5aca19480e4a34bd" }
game_base = { git = "https://github.com/polymorfiq/modding-toolkit.git", "rev" = "6a7311a830faebf96020337b5aca19480e4a34bd", features = ["client-sdk"] }
injection_utils = { git = "https://github.com/polymorfiq/modding-toolkit.git", "rev" = "6a7311a830faebf96020337b5aca19480e4a34bd" }
utils = { git = "https://github.com/polymorfiq/modding-toolkit.git", "rev" = "6a7311a830faebf96020337b5aca19480e4a34bd" }