[package]
name = "pathfinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ue_types = { git = "https://github.com/polymorfiq/modding-toolkit.git", "rev" = "531785d5ba7df08b0206dfb8bbdde437338721d7" }
game_base = { git = "https://github.com/polymorfiq/modding-toolkit.git", "rev" = "531785d5ba7df08b0206dfb8bbdde437338721d7", features = ["client-sdk"] }
injection_utils = { git = "https://github.com/polymorfiq/modding-toolkit.git", "rev" = "531785d5ba7df08b0206dfb8bbdde437338721d7" }
utils = { git = "https://github.com/polymorfiq/modding-toolkit.git", "rev" = "531785d5ba7df08b0206dfb8bbdde437338721d7" }