[package]
name = "tdm_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ue_types = { workspace = true }
game_base = { workspace = true }
injection_utils = { workspace = true }
utils = { workspace = true }